# machinekit-cnc

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.jenkins/: copy_includes  copy_libs
cmake/: Dependencies.cmake  FindKernelHeaders.cmake  Options.cmake  link_headers.cmake
debian/: README.debian  changelog.in  configure  control.in  control.posix-buster.in  control.posix-stretch.in  control.posix.in  control.rt-preempt-buster.in  control.rt-preempt-stretch.in  control.rt-preempt.in  control.xenomai-buster.in  control.xenomai-stretch.in  control.xenomai.in  machinekit-cnc-posix.install.in  machinekit-cnc-rt-preempt.install.in  machinekit-cnc-xenomai.install.in  machinekit-cnc.install.in  rules.in
fakeinclude/: INCLUDES.txt  README  canon.npb.h  canon.pb.h  config.npb.h  config.pb.h  emcclass.npb.h  emcclass.pb.h  firmware.npb.h  firmware.pb.h  jplan.npb.h  jplan.pb.h  log.npb.h  log.pb.h  message.npb.h  message.pb.h  motcmds.npb.h  motcmds.pb.h  nanopb.npb.h  nanopb.pb.h  object.npb.h  object.pb.h  preview.npb.h  preview.pb.h  ros.npb.h  ros.pb.h  rtapi_app.h  rtapi_message.npb.h  rtapi_message.pb.h  rtapicommand.npb.h  rtapicommand.pb.h  status.npb.h  status.pb.h  task.npb.h  task.pb.h  test.npb.h  test.pb.h  types.npb.h  types.pb.h  value.npb.h  (+1 more)
scripts/: CMakeLists.txt  build_docker  build_source_package  machinekit
src/emc/: CMakeLists.txt
src/emc/canterp/: CMakeLists.txt  Submakefile  canterp.cc
src/emc/ini/: CMakeLists.txt  emcIniFile.hh  iniaxis.cc  iniaxis.hh  inihal.cc  inihal.hh  initool.cc  initraj.cc  rtapi_global.h
src/emc/iotask/: CMakeLists.txt  Submakefile  hal_accessor.h  hal_list.h  hal_logging.h  hal_object.h  ioControl.cc  ioControl_v2.cc  rtapi_errno.h  rtapi_exception.h
src/emc/kinematics/: 5axiskins.c  CMakeLists.txt  Submakefile  XYZACkins.c  cubic.c  drawbotkins.c  gantrykins.c  genhexkins.c  genhexkins.h  genserkins.c  genserkins.h  hal.h  hal_types.h  kinematics.h  lineardeltakins-common.h  lineardeltakins.c  maxkins.c  pumakins.c  rotatekins.c  rt-preempt.h  rtapi.h  rtapi_app.h  rtapi_atomics.h  rtapi_bitops.h  rtapi_byteorder.h  rtapi_common.h  rtapi_compat.h  rtapi_ctype.h  rtapi_errno.h  rtapi_exception.h  rtapi_export.h  rtapi_global.h  rtapi_heap.h  rtapi_heap_private.h  rtapi_hexdump.h  rtapi_int.h  rtapi_io.h  rtapi_kdetect.h  rtapi_limits.h  rtapi_math.h  (+9 more)
src/emc/kinematics/userpci/: CMakeLists.txt  config_module.h
src/emc/motion/: CMakeLists.txt  Submakefile  command.c  control.c  hal.h  hal_accessor.h  hal_accessor_macros.h  hal_group.h  hal_internal.h  hal_iter.h  hal_object_selectors.h  hal_priv.h  hal_rcomp.h  hal_ring.h  homing.c  mot_priv.h  motion.c  motion.h  motion_debug.h  motion_id.h  rtapi_flavor.h  usrmotintf.cc
src/emc/nml_intf/: CMakeLists.txt  canon.hh  canon_position.cc  canon_position.hh  emc.cc  emc.hh  emc_nml.hh  emcargs.cc  emcglb.h  emcpos.h  emcpose.c  emcpose.h  interpl.cc
src/emc/pythonplugin/: CMakeLists.txt  Submakefile  python_plugin.cc
src/emc/rs274ngc/: CMakeLists.txt  Submakefile  canon.npb.h  canon.pb.h  config.npb.h  config.pb.h  emcclass.npb.h  emcclass.pb.h  firmware.npb.h  firmware.pb.h  gcodemodule.cc  hal_accessor_macros.h  hal_list.h  hal_logging.h  hal_object.h  hal_object_selectors.h  interp_base.hh  interp_execute.cc  interp_find.cc  interp_internal.hh  interp_inverse.cc  interp_namedparams.cc  interp_o_word.cc  interp_python.cc  interp_remap.cc  interp_write.cc  interpmodule.cc  jplan.npb.h  jplan.pb.h  log.npb.h  log.pb.h  message.npb.h  message.pb.h  modal_state.hh  motcmds.npb.h  motcmds.pb.h  nanopb.npb.h  nanopb.pb.h  nurbs_additional_functions.cc  object.npb.h  (+30 more)
src/emc/rs274ngc/preview/: CMakeLists.txt
src/emc/sai/: CMakeLists.txt  Submakefile  builtin_modules.cc  driver.cc  dummyemcstat.cc  nullcanon.cc  saicanon.cc
src/emc/task/: CMakeLists.txt  Submakefile  emccanon.cc  emcsvr.cc  emctask.cc  emctaskmain.cc  iotaskintf.cc  taskclass.cc  taskclass.hh  taskintf.cc  taskmodule.cc
src/emc/toolstore/: CMakeLists.txt
src/emc/toolstore/sql/: CMakeLists.txt
src/emc/tp/: CMakeLists.txt  Submakefile  blendmath.c  blendmath.h  hal.h  hal_types.h  rtapi.h  rtapi_limits.h  spherical_arc.c  spherical_arc.h  tc.c  tc.h  tc_types.h  tp.c  tp.h  tp_private.h  tp_shared.h  tp_types.h  tpmain.c  vtable.h
src/emc/usr_intf/: CMakeLists.txt  Submakefile  emccontroller.cc  emclcd.cc  emcrsh.cc  emcsched.cc  emcsched.hh  emcsh.cc  emcweb.cc  hal_types.h  halui.cc  keystick.cc  rtapi_app.h  schedrmt.cc  shcom.cc  shcom.hh  sockets.c  sockets.h  xemc.cc
src/emc/usr_intf/axis/: CMakeLists.txt  Submakefile
src/emc/usr_intf/axis/etc/: CMakeLists.txt
src/emc/usr_intf/axis/extensions/: CMakeLists.txt  _toglmodule.c  emcmodule.cc
src/emc/usr_intf/axis/scripts/: CMakeLists.txt  image-to-gcode.py
src/emc/usr_intf/emcweb/: CMakeLists.txt
src/emc/usr_intf/gmoccapy/: CMakeLists.txt
src/emc/usr_intf/gremlin/: CMakeLists.txt
src/emc/usr_intf/gscreen/: CMakeLists.txt
src/emc/usr_intf/pncconf/: CMakeLists.txt
src/emc/usr_intf/pncconf/pncconf-help/: CMakeLists.txt
src/emc/usr_intf/stepconf/: CMakeLists.txt
src/emc/usr_intf/touchy/: CMakeLists.txt
src/libnml/: CMakeLists.txt  Submakefile
src/libnml/buffer/: CMakeLists.txt  locmem.cc  locmem.hh  memsem.cc  memsem.hh  phantom.cc  phantom.hh  physmem.cc  recvn.c  rem_msg.hh  sendn.c  shmem.cc  shmem.hh  tcpmem.cc  tcpmem.hh
src/libnml/cms/: CMakeLists.txt  cms.cc  cms_aup.cc  cms_cfg.cc  cms_dup.cc  cms_in.cc  cms_pm.cc  cms_srv.cc  cms_srv.hh  cms_up.cc  cms_xup.cc  cmsdiag.cc  cmssvrp.cc  tcp_opts.cc  tcp_srv.cc  tcp_srv.hh
src/libnml/inifile/: Submakefile
src/libnml/linklist/: CMakeLists.txt
src/libnml/nml/: CMakeLists.txt  cmd_msg.cc  inifile.h  inifile.hh  nml.cc  nml.hh  nml_mod.cc  nml_mod.hh  nml_oi.hh  nml_srv.cc  nml_srv.hh  nmldiag.cc  nmldiag.hh  nmlmsg.cc  stat_msg.cc
src/libnml/os_intf/: CMakeLists.txt  _sem.c  _shm.c  _timer.c  rtapi_byteorder.h  rtapi_errno.h  rtapi_math.h  sem.cc  shm.cc
src/libnml/posemath/: Submakefile
src/libnml/rcs/: CMakeLists.txt  rcs.hh  rcs_exit.cc  rcs_print.cc
(+97 files in other folders)
